[tool.poetry]
name = "mp3-from-youtube"
version = "0.1.0"
description = "python package to simply download mp3 from youtube, add cover and tags. CLI provided too "
authors = ["Aliaksandr <archon.san@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
